# api/swagger.json
@@ -139,6 +139,33 @@
           }
         }
       },
+      "/MOB3/ajuda": {
+  "get": {
+    "summary": "Retorna informações da tela de ajuda",
+    "responses": {
+      "200": {
+        "description": "Texto de ajuda retornado com sucesso",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "titulo": {
+                  "type": "string",
+                  "example": "Ajuda"
+                },
+                "texto": {
+                  "type": "string",
+                  "example": "Preencha os dados da piscina e toque em 'Calcular' para ver o custo estimado.\n\nCaso tenha dúvidas, entre em contato com a equipe MOB3."
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+},
       "/datetime": {
         "get": {
           "summary": "Retorna data e hora do servidor",
